# akai-lpd8-obs

./: Cargo.toml  README.md  flake.nix  lpd8-mappings.toml
src/: main.rs
src/lpd8/: mod.rs
src/midi/: mod.rs
src/obs/: mod.rs
